--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- This is a footer -->
         <div class="footer">
-            <a href="http://instagram.com/prayudi.utomo">My Instagram</a>
+            <a href="http://instagram.com/antonia_aknes">My Instagram</a>
         </div>
         
     </body>
