--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="main">
             <div class="content">
                 <h1>Ini Home</h1>
-                <p>Silahkan isi konten di sini</p>
+                <p>wkwkwkw</p>
             </div>
             <div class="sidebar">
                 Valent cantik
