--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>wkwkwkw</p>
             </div>
             <div class="sidebar">
-                Valent cantik
+                Antonia cantik
             </div>
         </div>
 
