--- a/rate.html
+++ b/rate.html
@@ -4,10 +4,15 @@
         <title>Via Pulsa Penuh Kejutan</title>
     </head> 
     <body>
-        <div>
-            <a href="index.html"> <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/ppp.png" alt="Logo"> 
-            </a>
-        </div>
+         <!-- NAVBAR -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="layanan.html">Layanan</a></li>
+                <li><a href="rate.html">Rate & Harga</a></li>
+                <li><a href="panduan.html">Panduan</a></li>
+            </ul>
+        </nav>
         <div>
             <a href="index.html" title="Home">HOME</a>
             <a href="layanan.html" title="Layanan">LAYANAN</a>
