--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <li><a href="panduan.html">Panduan</a></li>
             </ul>
         </nav>
-        <
-        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/WELCOME%20to%20bash%20forjonathan.png" height="400px">
+        
+        <img claas="antpulsa" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/WELCOME%20to%20bash%20forjonathan.png" height="400px">
         
         <!-- This is a main -->
         <div class="main">
