--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         
         <img class="antpulsa" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/WELCOME%20to%20bash%20forjonathan.png" height="400px" width="100%">
         <div>
+            <h3>PROMO</h3>
+            <h5>Dapatkan promo menarik disetiap transaksi</h5>
+        </div>
+        <div>
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/vospay.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/xl.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/waspada.png">
