--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <h3>PROMO</h3>
             <h4>Dapatkan promo menarik disetiap transaksi</h4>
         </div>
-        <div>
+        <div class="bonus1"
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/vospay.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/xl.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/waspada.png">
         </div>
-        <div>
+        <div class="bonus2"
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/permatabank.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/im3.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/bonus.png">
