--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
         
         <img class="antpulsa" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/WELCOME%20to%20bash%20forjonathan.png" height="400px" width="100%">
-        <div>
+        <div class="bonus">
             <h3>PROMO</h3>
             <h4>Dapatkan promo menarik disetiap transaksi</h4>
         </div>
