--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Via Pulsa Penuh Kejutan</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
     </head> 
     <body>
        
