--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         
-        <img class="antpulsa" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/1%20N.%20Cactus%20Ave.%20Green%20Bay%2C%20WI%2054302.png" height="400px" width="80%">
+        <img class="bonus" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/1%20N.%20Cactus%20Ave.%20Green%20Bay%2C%20WI%2054302.png" height="400px" width="80%">
         <div class="bonus">
             <h3>PROMO</h3>
             <h4>Dapatkan promo menarik disetiap transaksi</h4>
