--- a/layanan.html
+++ b/layanan.html
@@ -26,7 +26,7 @@
                                 <img alt="image" src="/img/covers/home_banner_upper--md5--7f091ceb9b0fd04b706820e565a11865.jpg">  
                             </div>
                             <div class="video-play-icon"></div>
-                            <img src="https://www.youtube.com/embed/KRKCkirtzrc?autoplay=1">
+                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg">
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-5 col-md-offset-1">
