--- a/layanan.html
+++ b/layanan.html
@@ -23,10 +23,10 @@
                     <div class="col-sm-6 col-md-6 col-xs-12">
                         <div class="video-cover border--round box-shadow-wide">
                             <div class="background-image-holder modal-instance block">
-                                <img alt="image" src=" <img alt="image" src="/img/covers/home_banner_upper--md5--7f091ceb9b0fd04b706820e565a11865.jpg">">  
+                                <img alt="image" src=" <img alt="image" src="/img/covers/home_banner_upper--md5--7f091ceb9b0fd04b706820e565a11865.jpg">  
                             </div>
                             <div class="video-play-icon"></div>
-                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg">
+                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="50px height="60">
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-5 col-md-offset-1">
