--- a/layanan.html
+++ b/layanan.html
@@ -25,7 +25,7 @@
                             <div class="background-image-holder modal-instance block">
                                   
                             </div>
-                            <div class="video-play-icon"></div>
+                            
                             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="50px height="60">
                         </div>
                     </div>
@@ -33,8 +33,8 @@
                         <div class="switchable__text">
                             <h2>HACKTIV8 Coding Bootcamp</h2>
                             <p class="lead">
-                            HACKTIV8 adalah coding bootcamp Full Stack JavaScript pertama di Indonesia. Kurikulum HACKTIV8 dirancang untuk membangun keahlian yang dapat diaplikasikan pada perkembangan dunia teknologi terkini. HACKTIV8 bekerja sama dengan berbagai perusahaan, menghubungkan mereka dengan lulusan HACKTIV8 untuk menciptakan peluang bersama dalam mengedepankan produk dengan teknologi berkualitas. 
-                                <a href="/fullstack/silabus/">Request Silabus kami sekarang.</a>
+                            DI TO-CELL Kamu akan banyak menemukan Promo Promo yang menarik, apalagi bagi KAULA MUDA yang suka beli pulsa untuk internetan
+                            sekarang tidak perlu lagi galau meratapi harga kouta yang mahal tinggal beli saja pulsa melalui TO-CELL
                             </p>
                         </div>
                     </div>
