--- a/layanan.html
+++ b/layanan.html
@@ -26,7 +26,7 @@
                                   
                             </div>
                             
-                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="50px height="60">
+                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="100px height="150px">
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-5 col-md-offset-1">
