--- a/layanan.html
+++ b/layanan.html
@@ -22,16 +22,17 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-6 col-xs-12">
                         <div class="video-cover border--round box-shadow-wide">
+                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="100px height="150px">
+                        </div>
                             <div class="background-image-holder modal-instance block">
                                   
                             </div>
                             
-                            <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="100px height="150px">
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-5 col-md-offset-1">
                         <div class="switchable__text">
-                            <h2>HACKTIV8 Coding Bootcamp</h2>
+                            <h2>TO-CELL</h2>
                             <p class="lead">
                             DI TO-CELL Kamu akan banyak menemukan Promo Promo yang menarik, apalagi bagi KAULA MUDA yang suka beli pulsa untuk internetan
                             sekarang tidak perlu lagi galau meratapi harga kouta yang mahal tinggal beli saja pulsa melalui TO-CELL
