--- a/layanan.html
+++ b/layanan.html
@@ -18,7 +18,7 @@
         <img class="bonus" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/1%20N.%20Cactus%20Ave.%20Green%20Bay%2C%20WI%2054302.png" height="400px" width="100%">
         
         <section class="feature-large bg--secondary">
-            <div class="gmabar">
+            <div class="gambar">
                 <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="200px height="250px">
             </div>
             <div class="to-cell">
@@ -26,8 +26,9 @@
                     <h2>TO-CELL</h2>
                 </div>
                 <div class="isi">
-                    <p>DI TO-CELL Kamu akan banyak menemukan Promo Promo yang menarik, apalagi bagi KAULA MUDA yang suka beli pulsa untuk internetan
-sekarang tidak perlu lagi galau meratapi harga kouta yang mahal tinggal beli saja pulsa melalui TO-CELL
+                    <p>DI TO-CELL Kamu akan banyak menemukan Promo Promo yang menarik, 
+                    <br>apalagi bagi KAULA MUDA yang suka beli pulsa untuk internetan
+                    <br>sekarang tidak perlu lagi galau meratapi harga kouta yang mahal tinggal beli saja pulsa melalui TO-CELL
                     </p>
                 </div>
             </div>
