--- a/layanan.html
+++ b/layanan.html
@@ -17,6 +17,7 @@
         
         <img class="bonus" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/1%20N.%20Cactus%20Ave.%20Green%20Bay%2C%20WI%2054302.png" height="400px" width="100%">
         <div class="pembatas"></div>
+        <!-- to-cell -->
         <div>
             <div class="gambar">
                 <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/we're%20helping%20you%20fill%20your%20stockings.jpg" width="200px height="250px"
