--- a/layanan.html
+++ b/layanan.html
@@ -28,6 +28,7 @@
                     <p>DI TO-CELL Kamu akan banyak menemukan Promo Promo yang menarik, 
                     <br>apalagi bagi KAULA MUDA yang suka beli pulsa untuk internetan
                     <br>sekarang tidak perlu lagi galau meratapi harga kouta yang mahal tinggal beli saja pulsa melalui TO-CELL
+                    <a href="https://www.sepulsa.com/">Info selanjutnya</a>
                     </p>
                 </div>
             </div>
