--- a/layanan.html
+++ b/layanan.html
@@ -32,6 +32,20 @@
                     </p>
               </div>                       
         </div>
+        <div class="pembatas"></div>
+        <div>
+            <h2>Beli Pulsa di TO-CELL: Mudah, Cepat, Tidak Ribet</h2>
+            <p>Kehabisan pulsa di zaman serba online ini? Sepulsa menyediakan layanan isi ulang pulsa kapan saja dan dengan segala macam metode pembayaran. 
+            <br>Tidak perlu lagi kesulitan online tengah malam karena layanan isi ulang pulsa di Sepulsa aktif 24 jam dan support segala macam jenis pembayaran. 
+            <br>Isi ulang pulsa operator Telkomsel, Indosat, XL, Tri, Axis, Bolt, dan Smartfren dengan beragam nominal yang tersedia mulai dari 5.000, 10.000 sampai 500.000, semua hadir untuk kemudahan anda membeli pulsa secara online.
+            <br>Berbagai jenis pembayaran yang kami sediakan seperti 
+            <br>Kredivo, Debit BCA, Mandiri, VCN BNI, CIMB Niaga, Bank Mega dan ANZ sangat reliable dan cocok untuk anda yang mengutamakan kemudahan dan kecepatan dalam bertransaksi, anda cukup isi nomor handphone anda, memlih nominal pulsa yang anda inginkan, 
+            <br>kemudian pilih metode pembayaran yang paling sesuai dengan anda.
+            <br>Bukan pulsa yang anda cari? Kami juga menyediakan berbagai macam layanan lainnya seperti isi ulang paket data 
+            <br>untuk anda yang butuh kuota internet dengan harga murah, pembayaran BPJS, Pembayaran PLN, cicilan, 
+            <br>tagihan Telkom, dan PDAM semua dengan proses yang sangat mudah, cepat, dan customer service yang aktif 24 jam.
+            </p>                 
+        </div>                     
                                                           
     </body>
 
