--- a/layanan.html
+++ b/layanan.html
@@ -33,7 +33,7 @@
               </div>                       
         </div>
         <div class="pembatas"></div>
-        <div>
+        <div class="to-cell">
             <h2>Beli Pulsa di TO-CELL: Mudah, Cepat, Tidak Ribet</h2>
             <p>Kehabisan pulsa di zaman serba online ini? Sepulsa menyediakan layanan isi ulang pulsa kapan saja dan dengan segala macam metode pembayaran. 
             <br>Tidak perlu lagi kesulitan online tengah malam karena layanan isi ulang pulsa di Sepulsa aktif 24 jam dan support segala macam jenis pembayaran. 
