--- a/layanan.html
+++ b/layanan.html
@@ -44,7 +44,7 @@
         <br>
         <div class="pembatas"></div>
         <div class="to-cell">
-            <img src="https://2.bp.blogspot.com/-gOrqr0wByr4/WDzoCMIoLwI/AAAAAAAAAOc/bwRIMokfcI4Ov2OaXZsXtWEQy_bBn-NFACLcB/s1600/merah%2Bcopy.png">   
+            <img src="https://2.bp.blogspot.com/-gOrqr0wByr4/WDzoCMIoLwI/AAAAAAAAAOc/bwRIMokfcI4Ov2OaXZsXtWEQy_bBn-NFACLcB/s1600/merah%2Bcopy.png" height="300px" width="350px">   
             <h2>Beli Pulsa di TO-CELL: Mudah, Cepat, Tidak Ribet</h2>
             <p>Kehabisan pulsa di zaman serba online ini? Sepulsa menyediakan layanan isi ulang pulsa kapan saja dan dengan segala macam metode pembayaran. 
             <br>Tidak perlu lagi kesulitan online tengah malam karena layanan isi ulang pulsa di Sepulsa aktif 24 jam dan support segala macam jenis pembayaran. 
