--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
                 <li><a href="layanan.html">Layanan</a></li>
             </ul>
         </nav>
-        
+         <!-- DIV SLIDE -->
+                <div class="slideshow-container">
+
+                    <div class="mySlides fade">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL.png" style="width:90%">
+                        <div class="text">Caption Text</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(2).png" style="width:100%">
+                        <div class="text">Caption Two</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(1).png" style="width:90%">
+                        <div class="text">Caption Three</div>
+                    </div>
+
+                </div>
+                <br>
+
         <img class="bonus" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/1%20N.%20Cactus%20Ave.%20Green%20Bay%2C%20WI%2054302.png" height="400px" width="100%">
         <div class="bonus">
             <h3>PROMO</h3>
