--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
                 </div>
                 <br>
+                <div style="text-align:center">
+                        <span class="dot"></span> 
+                        <span class="dot"></span> 
+                        <span class="dot"></span> 
+                    </div>
+
 
         <img class="bonus" src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/1%20N.%20Cactus%20Ave.%20Green%20Bay%2C%20WI%2054302.png" height="400px" width="100%">
         <div class="bonus">
