--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
-                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL.png" style="width:90%">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL.png" style="width:100%" height="400px">
                         <div class="text">Caption Text</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(2).png" style="width:100%">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(2).png" style="width:100%" height="400px>
                         <div class="text">Caption Two</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(1).png" style="width:90%">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(1).png" style="width:100%" height="400px>
                         <div class="text">Caption Three</div>
                     </div>
 
