--- a/layanan.html
+++ b/layanan.html
@@ -18,7 +18,7 @@
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
-                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL.png" style="width:100%" height="500px">
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(1).png" style="width:100%" height="500px">
                         <div class="text">Caption Text</div>
                     </div>
 
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL%20(1).png" style="width:100%" height="500px>
+                        <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/TO-CELL.png" style="width:100%" height="500px>
                         <div class="text">Caption Three</div>
                     </div>
 
