--- a/index.html
+++ b/index.html
@@ -78,8 +78,26 @@
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/im3.png">
             <img src="https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/bonus.png">
         </div>   
-     
+        <div class="form-style-3">
+            <form>
+                <fieldset><legend>Personal</legend>
+                <label for="field1"><span>Name <span class="required">*</span></span><input type="text" class="input-field" name="field1" value="" /></label>
+                <label for="field2"><span>Email <span class="required">*</span></span><input type="email" class="input-field" name="field2" value="" /></label>
+                <label for="field3"><span>Phone <span class="required">*</span></span><input type="text" class="input-field" name="field3" value="" /></label>
+                <label for="field4"><span>Subject</span><select name="field4" class="select-field">
+                <option value="Appointment">Appointment</option>
+                <option value="Interview">Interview</option>
+                <option value="Regarding a post">Regarding a post</option>
+                </select></label>
+                </fieldset>
+                <fieldset><legend>Message</legend>
+                <label for="field6"><span>Message <span class="required">*</span></span><textarea name="field6" class="textarea-field"></textarea></label>
+                <label><span>&nbsp;</span><input type="submit" value="Sign In"/></label>
+                </fieldset>
+            </form>
+        </div>
     </body>
 
 </html>
+
 
