--- a/testimoty.html
+++ b/testimoty.html
@@ -1,98 +1,127 @@
 
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Ini Contact</title>
-    </head>
-    <link href="css/style.css" rel="stylesheet">
-    <body>
-        <div class="parent">
-      		<div id="product-tabs-pane-1" aria-labelledby="product-tabs-tab-1" role="tabpanel" aria-hidden="false" class="tab-pane active">
-			<div role="alert" class="hidden alert alert-danger">
-				<span class="glyphicon glyphicon-exclamation-sign"></span>
-				<span class="sr-only">Error:</span><span class="custom-info"></span>
-			</div>
-			<div id="pulsa-form">
-				<div class="field-container input-bg input-phone">
-					<input type="tel" class="field" placeholder="Masukan Nomor Handphone" required="" name="mobileprepaid_telp" value="">
-					<label for="Nomor Handphone" class="floating-label">Nomor Handphone</label>
-					<div class="field-underline"></div>
-					<div class="clear-fields hidden">
-						<a><span class="glyphicon glyphicon-remove"></span></a>
-					</div>
-					<div class=""></div>
 
-      		section.isi-product .product-tabs .tab-content>.tab-pane {
-    background: #fff;
-    padding: 20px 15px;
-    border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
-    -moz-border-radius: 0 0 5px 5px;
-    -ms-border-radius: 0 0 5px 5px;
-    -o-border-radius: 0 0 5px 5px;
-    box-shadow: 0 2px 10px 0 rgba(0,0,0,.16);
-}
-.tab-content>.active {
-    display: block;
-}
-.tab-content>.tab-pane {
-    display: none;
-}
-*, :after, :before {
-    box-sizing: border-box;
-}
-*, :after, :before {
-    box-sizing: border-box;
-}
-user agent stylesheet
-div {
-    display: block;
-}
-body, html {
-    font-family: Roboto,sans-serif;
-    background: #fff;
-    position: relative;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-body {
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
-    background-color: #fff;
-}
-body, html {
-    font-family: Roboto,sans-serif;
-    background: #fff;
-    position: relative;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-html {
-    font-size: 10px;
-    -webkit-tap-highlight-color: transparent;
-}
-html {
-    font-family: sans-serif;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-}
-*, :after, :before {
-    box-sizing: border-box;
-}
-*, :after, :before {
-    box-sizing: border-box;
-}
-*, :after, :before {
-    box-sizing: border-box;
+<head>
+
+<title>contoh tab dengan css</title>
+
+<style type="text/css">
+
+#tab1:checked ~ .content1,#tab2:checked ~ .content2,#tab3:checked ~ .content3{
+
+background: #735220;
+
+display: block;
+
 }
 
-*, :after, :before {
-    box-sizing: border-box;
-    </body>
-</html>
+
+
+
+.content1,.content2,.content3{
+
+display: none;
+
+clear: both;
+
+border: 1px solid #797979;
+
+background: #fff !important;
+
+clear: both;
+
+z-index: 444;
+
+padding: 5px;
+
+width: 500px;
+
+}
+
+#tab1:checked ~ #label1,#tab2:checked ~ #label2,#tab3:checked ~ #label3{
+
+border: 1px solid #797979; 
+
+border-top:3px solid #728D7B;
+
+border-bottom:1px solid transparent;
+
+}
+
+#label1,#label2,#label3{
+
+display: block;
+
+width: 70px;
+
+float: left;
+
+background:navajowhite;
+
+padding:10px 15px 10px 15px;
+
+z-index: 9999; 
+
+margin-bottom:-1px;
+
+cursor: pointer;
+
+}
+
+.media{
+
+max-height:600px;
+
+max-width:100%;
+
+overflow: auto;
+
+}
+
+#tab1,#tab2,#tab3{
+
+opacity: 0;
+
+}
+
+</style>
+
+
+
+
+</head>
+
+<body>
+
+<input type="radio" name="tab" id="tab1" checked="checked">
+
+<label id="label1" for="tab1" >Tab1</label>
+
+<input type="radio" name="tab" id="tab2">
+
+<label id="label2" for="tab2">Tab2</label>
+
+<input type="radio" name="tab" id="tab3">
+
+<label id="label3" for="tab3">Tab3</label>
+
+<div class="content1">
+
+Conten Tab 1
+
+</div>
+
+<div class="content2">
+
+Conten Tab 2
+
+</div>
+
+<div class="content3">
+
+Conten Tab 3
+
+</div>
+
+</body>
+
